# robot-graphics

./: .gitignore  2.1.basic_lighting.vs  6.multiple_lights.fragmentshader  CMakeLists.txt  Grips.h  IIRsos.cpp  README.md  WinUdpBkstServer.h  camera.h  glad.c  glfw_interface.h  kinematics.h  kinematics_fixed.cpp  kinematics_fixed.h  log_fixed.cpp  main.cpp  mesh.h  model.cpp  model.h  objloader.cpp  shader-reader.h  texture.cpp  usb-com-handle.h  utils.cpp
robot-graphics/robot-graphics/: 6.light_cube.fs  6.multiple_lights.fs  CMakeLists.txt  RenderBullet.cpp  RenderBullet.h  RenderRobot.h  WinUdpBkstServer.h  WinUdpClient.h  args-parsing.h  dh_hex_fixed.cpp  dh_hex_fixed.h  dynahex.cpp  dynahex.h  finger-kinematics.cpp  finger-kinematics.h  footpath.csv  glass.fs  glfw_interface.cpp  glfw_interface.h  hexapod_footpath.cpp  hexapod_footpath.h  kinematics.cpp  kinematics.h  kinematics_fixed.cpp  kinematics_fixed.h  log_fixed.cpp  log_fixed.h  main.cpp  model.cpp  model.h  physics_thread.cpp  physics_thread.h  psy-grips.cpp  psyhand_urdf.h  robot-graphics.vcxproj  robot-graphics.vcxproj.filters  serial-thread.cpp  serial-thread.h  shader-reader.h  sin_fast.cpp  (+12 more)
robot-graphics/robot-graphics/URDF/: hexapod.urdf
robot-graphics/robot-graphics/lib-debug/: LinearMath_vs2010_x64_debug.lib  assimp-vc142-mtd.exp  assimp-vc142-mtd.lib  assimp-vc143-mt.exp  assimp-vc143-mtd.exp  glfw3.lib
robot-graphics/robot-graphics/lib-release/: BulletCollision_vs2010_x64_release.lib  BulletDynamics_vs2010_x64_release.lib  LinearMath_vs2010_x64_release.lib  assimp-vc142-mt.exp  assimp-vc142-mt.lib  glfw3.lib
robot-graphics/robot-graphics/misc_models/: simple-tree.urdf
robot-graphics/robot-graphics/misc_models/dynahex/: F0-stripped.STL  FB-stripped.STL  FB.mtl
robot-graphics/robot-graphics/misc_models/psyonic-hand/: finger-F2.STL  idx-F0.SLDPRT  idx-F1.STL  idx-F2.STL  split-finger-F1.STL  thumb-C0.SLDPRT  thumb-F0.STEP  thumb-F1.SLDPRT  thumb-F1.STEP  (+5 more)
robot-graphics/robot-graphics/render/: FB_base_meters.STL  FB_base_meters_HULL.stl  FB_base_meters_SIMPLE_HULL.stl  J2_link2_meters.STL  J3_link3_meters.STL
(+51 files in other folders)
